chore: Add Flask-Caching and Dash dependencies
Note: This commit adds the Flask-Caching and Dash dependencies to the Pipfile, and updates the config.py file to include cache configuration.

--- a/Pipfile
+++ b/Pipfile
@@ -20,6 +20,9 @@ stockstats = "*"
 pandas = "*"
 numpy = "*"
 requests-html = "*"
+flask-caching = "*"
+dash-table = "*"
+dash-html-components = "*"
 
 [dev-packages]
 pytest = "*"
