I hope this doesnt break my whole app

--- a/Pipfile
+++ b/Pipfile
@@ -23,6 +23,7 @@ requests-html = "*"
 flask-caching = "*"
 dash-table = "*"
 dash-html-components = "*"
+dash-daq = "*"
 
 [dev-packages]
 pytest = "*"
