--- a/Pipfile
+++ b/Pipfile
@@ -4,30 +4,33 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-flask = "*"
-flask-sqlalchemy = "*"
-flask-migrate = "*"
-flask-wtf = "*"
-flask-login = "*"
-requests = "*"
-python-dotenv = "*"
-plotly = "*"
-dash = "*"
-dash-bootstrap-components = "*"
-polygon-api-client = "*"
-pytz = "*"
-stockstats = "*"
-pandas = "*"
-numpy = "*"
-requests-html = "*"
-flask-caching = "*"
-dash-table = "*"
-dash-html-components = "*"
-dash-daq = "*"
+flask = "====3.0.3"
+flask-sqlalchemy = "====3.1.1"
+flask-migrate = "====4.0.7"
+flask-wtf = "====1.2.1"
+flask-login = "====0.6.3"
+requests = "====2.32.3"
+python-dotenv = "====1.0.1"
+plotly = "====5.24.1"
+dash = "====2.18.1"
+dash-bootstrap-components = "====1.6.0"
+polygon-api-client = "====1.14.2"
+pytz = "====2024.2"
+stockstats = "====0.6.2"
+pandas = "====2.2.3"
+numpy = "====2.1.2"
+requests-html = "====0.10.0"
+flask-caching = "====2.3.0"
+dash-table = "====5.0.0"
+dash-html-components = "====2.0.0"
+dash-daq = "====0.5.0"
+celery = "====5.4.0"
+redis = "====5.1.1"
+toml = "====0.10.2"
 
 [dev-packages]
-pytest = "*"
-ipykernel = "*"
+pytest = "====8.3.3"
+ipykernel = "====6.29.5"
 
 [requires]
 python_version = "3.12"
