--- a/Pipfile
+++ b/Pipfile
@@ -29,8 +29,10 @@ toml = "*"
 python-dotenv = {extras = ["cli"], version = "*"}
 
 [dev-packages]
-pytest = "*"
 ipykernel = "*"
+pytest = "*"
+pytest-mock = "*"
+pytest-cov = "*"
 
 [requires]
 python_version = "3.12"
